--- a/mean-exercises/week5/memory/package.json
+++ b/mean-exercises/week5/memory/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "app",
+  "name": "memory",
   "version": "1.0.0",
-  "description": "A sample app.",
+  "description": "A test to make NodeJS Server from scratch.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "sample",
-    "app",
-    "node",
-    "express"
+    "from",
+    "scratch",
+    "memory"
   ],
-  "author": "509dave16",
+  "author": "509Dave16",
   "license": "ISC",
   "dependencies": {
-    "b": "^2.0.1",
     "body-parser": "^1.12.3",
     "express": "^4.12.3",
     "uuid": "^2.0.1"
