Finished functional version of Poke Guess after porting jquery timer, score, and strike logic over.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ personal-projects/
 mean-exercises/week2/vins-grid-generator.js
 mean-homework/week3/homework/poke-guess/assets/bower_components/
 node_modules
+bower_components
