--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ personal-projects/
 mean-exercises/week2/vins-grid-generator.js
 mean-homework/week3/homework/poke-guess/assets/bower_components/
 node_modules
+bower_components
+.idea
